# jwt

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/models/: user_model.rs
src/routes/: auth_route.rs  mod.rs  user_route.rs
src/utils/: api_error.rs  connectDb.rs  guards.rs  jwt.rs  mod.rs
