[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

axum = { version = "0.6.20", features = ["headers", "multipart"] }
chrono = "0.4.34"
dotenv = "0.15.0"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
serde = { version = "1.0.197", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
lazy_static = "1.4.0"
serde_json = "1.0.114"
jsonwebtoken = "9.2.0"
